tests/name_resolution/circular-use.stderr
error[E024]: declarations `crate.alpha1` and `crate.fake-my-dude.alpha0` are circular
 >>> ${DIRECTORY}/name_resolution/circular-use.lushui:3:35
  |
3 | use fake-my-dude.alpha0.((self as alpha1))
  |                                   ^^^^^^ 
  |
 >>> ${DIRECTORY}/name_resolution/circular-use.lushui:8:25
  |
8 |     use super.alpha1 as alpha0
  |                         ^^^^^^ 
  |

error[E024]: declarations `crate.fake-my-dude.beta0`, `crate.fake-my-dude.beta1` and `crate.fake-my-dude.beta2` are circular
  >>> ${DIRECTORY}/name_resolution/circular-use.lushui:6:18
   |
 6 |     use beta0 as beta1
   |                  ^^^^^ 
   |
  >>> ${DIRECTORY}/name_resolution/circular-use.lushui:10:18
   |
10 |     use beta1 as beta2
   |                  ^^^^^ 
   |
  >>> ${DIRECTORY}/name_resolution/circular-use.lushui:12:23
   |
12 |     use self.beta2 as beta0
   |                       ^^^^^ 
   |

error: aborting due to 2 previous errors

